# ParFastKer

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark_different_partitions.sh  benchmark_directory.py  boxplots_different_partitioner_configurations.py  different_partitions_tables.py  draw_graphs.py  find_large_graphs.py  getComparisonTables.py  getParallelComparisonTable.py  getParallelExactKernelComparisonTable.py  getSequentialComparisonTable.py  getTables.py  get_data_LinearTime.py  get_data_NearLinear.py  get_data_akiba.py  get_data_ours.py  metisDirectedToUndirected.py  metisToMtx.py  partition_graphs.py  partitition_graphs.py  plotScalingKernelSize.py  plotScalingReductionsPerSecond.py  plotScalingRunTime.py  plot_convergence_and_partition_times.py  plot_lp.py  plot_weight_distribution.py  removed_reductions_tables.py  renameGraphs.py  run_benchmarks.sh  summaryPlot.py
src/: ArraySet.h  MaximumMatching.cpp  MaximumMatching.h  MaximumMatchingOld.cpp  MaximumMatchingOld.h  ProfilingHelper.h  Reduction.h  SimpleSet.h  SparseArraySet.h  benchmark.cpp  benchmark_fine_grained.cpp  configuration_mis.h  fast-reductions.cpp  fast_set.h  full_reductions.cpp  full_reductions.h  kernelizationDefinitions.h  mis_config.h  mis_log.cpp  mis_log.h  parallel_branch_and_reduce_algorithm.cpp  parallel_branch_and_reduce_algorithm.h  parallel_modified.cpp  parallel_modified.h  parallel_reductions.cpp  parallel_reductions.h  parallel_reductions_fine_grained.cpp  parallel_reductions_fine_grained.h  parallel_reductions_old.cpp  parallel_reductions_old.h  parse_parameters.h  sequential_benchmark.cpp  sequential_benchmark_reduction_wise.cpp  test_correctness.cpp
src/data_structures/: array_set.h
src/sequential/: branch_and_reduce_algorithm.cpp  branch_and_reduce_algorithm.h  modified.cpp  modified.h
